--- a/kids story.html
+++ b/kids story.html
@@ -6,4 +6,5 @@
 <body> 
 	<h1> Kids story </h1> 
 </body> 
+	There was once a miser. He melted all his money into a block of gold and buried it in a pit. Every day he would dig it up and smile to see it. 
 </html>
